fix: Fix bio image placement on mobile.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -38,7 +38,10 @@
   }
 }
 
-@media (width <= 1000px) ) {
+@media (width <= 1000px) {
+  .left {
+    grid-column: span 2;
+  }
   .col2,
   .col3,
   .col4 {
